--- a/Linear Regression.ipynb
+++ b/Linear Regression.ipynb
@@ -18,8 +18,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot  as plt\n",
-    "from sklearn import linear_model\n",
-    "print(\"Hello\")"
+    "from sklearn import linear_model\n"
    ]
   },
   {
